# EvoPrompt

./: .env.example  .env.swp  .gitignore  .gitmodules  .pre-commit-config.yaml  1.csv  2.csv  CLAUDE.md  COMPLETE_FLOW.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  INTELLIGENT_SYSTEM_SUMMARY.md  LICENSE  METRICS_GUIDE.md  METRICS_SUMMARY.md  PRIMEVUL_LAYERED_FLOW.md  QUICK_START.md  RAG_README.md  README.md  README.md.backup  README_CWE_统计.md  README_INDEX.md  README_MAIN.md  SAMPLE_FEEDBACK_GUIDE.md  START_HERE.md  SVEN_INTEGRATION.md  SYSTEM_OVERVIEW.md  THREE_LAYER_README.md  TROUBLESHOOTING.md  args.py  cwe_category_pie_chart.py  cwe_statistics.py  demo_primevul_1percent.py  enhanced_vulnerability_evaluator.py  evolution_tracker.py  intelligent_evolution.py  main.py  method.md  methods_comparison.csv  playground.py  (+26 more)
.claude/: settings.local.json
docs/: AGENTS.md  ARCHITECTURE_OPTIMIZATION_PLAN.md  CHECKPOINT_GUIDE.md  COMPLETE_FLOW.md  CONCURRENT_USAGE.md  CWE_CATEGORY_README.md  Evolutor.md  FILES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MAINLINE_ARCHITECTURE.md  METRICS_GUIDE.md  METRICS_SUMMARY.md  MULTIAGENT_README.md  NL_AST_INTEGRATION_COMPLETE.md  NL_AST_LIMITATION_AND_SOLUTIONS.md  PRIMEVUL_1PERCENT_DEMO.md  PRIMEVUL_LAYERED_FLOW.md  PROMPT_EVOLUTION_FIX.md  QUICKSTART.md  RAG_README.md  README_CWE_图表生成.md  README_CWE_统计.md  README_INDEX.md  README_MAIN.md  REBUTTAL_PLAN.md  SCRIPTS_GUIDE.md  START_HERE.md  SYSTEM_OVERVIEW.md  THREE_LAYER_README.md  TROUBLESHOOTING.md  WORKFLOW.md  bug_fix_summary.md  comments.md  official_reply.md  p1_experiment_plan.md  parsertool_setup.md  pipeline.md  primevul_comment4vul_integration.md  primevul_nl_ast_pipeline.md  (+6 more)
docs/plans/: 2026-02-16-supplementary-experiments-design.md  2026-02-16-supplementary-experiments-impl.md
docs/superpowers/plans/: 2026-03-17-unified-pipeline.md
init/: layer1_prompts.txt
outputs/rebuttal/: sampled_150.jsonl  sampled_v2_200.jsonl
outputs/rebuttal/exp2_agent_comparison/: mad_results.json  mulvul_results.json  reflexion_results.json
outputs/supplementary/: rebuttal_filled.md
scripts/: __init__.py  build_knowledge_base.py  cwe_statistics.py  demo_cwe_category_classification.py  demo_f1_metrics.py  demo_multiagent_coevolution.py  demo_multiagent_debug.py  demo_mulvul.py  demo_rag_detection.py  fix_dataset_braces.py  generate_semantic_comments.py  playground.py  preprocess_primevul_comment4vul.py  quick_cwe_stats.py  replace_cwe_categories.py  run_baseline_zeroshot.py  run_cwe_evolution.sh  run_full_pipeline.py  run_full_training.sh  run_hierarchical_train.py  run_mainline_evaluation.py  run_mainline_evolution.py  run_mop_evaluation.sh  run_mulvul_cwe_eval.py  run_mulvul_eval.py  run_parallel_evolution.sh  run_parallel_hierarchical_evolution.py  run_primevul_concurrent_optimized.py  run_primevul_rag_eval.py  run_three_layer_full_eval.py  summarize_cost.py  test_preprocess_basic.py  train_three_layer.py  validate_nl_ast_quality.py  verify_language_detection.py  verify_response_parsing.py
scripts/ablations/: README.md  __init__.py  build_knowledge_base.py  convert_cwe_researchview.py  cwe_category_pie_chart.py  demo_f1_metrics.py  demo_multiagent_coevolution.py  demo_mulvul.py  demo_primevul_1percent.py  demo_three_layer_detection.py  fix_dataset_braces.py  generate_cwe_subset.py  generate_rebuttal_snippet.py  generate_semantic_comments.py  playground.py  preprocess_primevul_comment4vul.py  preprocess_primevul_research_concepts.py  primevul_full_stats.py  quick_train_test.py  run_baseline_zeroshot.py  run_benchmark_tuning.py  run_category_concurrent_eval.py  run_cwe_evolution.py  run_cwe_evolution.sh  run_cwe_mapping.sh  run_full_pipeline.py  run_hierarchical_train.py  run_mulvul_cwe_eval.py  run_parallel_evolution.sh  run_primevul_1percent.py  run_primevul_full_concurrent.py  run_primevul_layer2.py  summarize_cost.py  test_checkpoint.py  test_parser_integration.py  test_quick.py  verify_multiagent.py  verify_response_parsing.py
scripts/rebuttal/: aggregate_cwe130.py  build_retrieval_kb.py  create_eval_subset.py  eval_allcat_rag.py  eval_direct_cwe.py  eval_evolved_hybrid_full.py  eval_hybrid_full.py  eval_hybrid_llm_knn.py  eval_knn_retrieval.py  eval_twostage_rag.py  evolve_cwe130.py  evolve_hybrid.py  llm_utils.py  plot_cost_effectiveness.py  plot_p1_results.py  run_cwe130_eval.py  run_mad_baseline.py  run_mulvul_baseline.py  run_mulvul_evolved.py  run_reflexion_baseline.py  run_singlepass_norag.py  run_singlepass_rag.py  sample_test_data.py
src/evoprompt/: __init__.py  cli.py
src/huawei/: README.md  __init__.py  dataset.py  demo.py  mlops.py  prompt_manager.py  run_tests.py  workflow.py
tests/: conftest.py  test_algorithms.py  test_batch_optimization.py  test_batch_processing.py  test_batch_script_run.py  test_concurrent_batch.py  test_concurrent_default.py  test_concurrent_fix.py  test_contrastive_retriever.py  test_cost_tracker.py  test_detection_pipeline.py  test_evaluator.py  test_evaluator_static_analysis.py  test_experiment_manager.py  test_gpt4o_rag_baseline.py  test_knowledge_base_clean_pool.py  test_llm_runtime.py  test_mainline_artifact.py  test_mainline_system.py  test_multiagent_components.py  test_multilayer_evolution.py  test_mulvul_detector.py  test_parallel_detector.py  test_parallel_rag.py  test_parallel_rag_factory.py  test_prompt_change_logger.py  test_prompt_contract.py  test_prompt_template.py  test_prompt_truncation.py  test_rag_retriever_parallel.py  test_response_parsing.py  test_sampler_balanced.py  test_simple_unlimited.py  test_static_analysis.py  test_unlimited_tokens.py  test_utils_text.py
(+132 files in other folders)
