[project]
name = "evoprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.21.0",
    "backoff==2.2.1",
    "bitsandbytes==0.41.1",
    "comet==3.1.0",
    "datasets==2.13.1",
    "easse",
    "fairseq==0.12.2",
    "jsonlines==3.1.0",
    "mosestokenizer==1.2.1",
    "msal==1.20.0",
    "nevergrad==0.7.0",
    "numpy==1.23.3",
    "openai==0.27.8",
    "pyyaml==6.0",
    "requests==2.31.0",
    "rouge==1.0.1",
    "sacrebleu==2.3.1",
    "scikit-learn==1.3",
    "termcolor==2.3.0",
    "torch==2.1",
    "tqdm==4.64.1",
    "transformers",
    "unbabel-comet>=2.2.6",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
easse = { git = "https://github.com/feralvam/easse.git" }
